syntax = "proto3";

package celestia.zkism.v1;

option go_package = "github.com/celestiaorg/celestia-app/x/zkism/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

// ZKExecutionISM defines the Hyperlane interchain security module (ISM).
message ZKExecutionISM {
  option (gogoproto.goproto_getters) = false;

  // unique hyperlane identifier
  string id = 1 [
    (gogoproto.customtype) = "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable)   = false
  ];
  // the owner or creator of the ism
  string owner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // state commitment root of the remote chain
  bytes state_root = 3;
  // latest tracked height of the remote chain
  uint64 height = 4;
  // the celestia namespace identifier used by the application
  bytes namespace = 5;
  // the public key of the sequencer
  bytes sequencer_public_key = 6;
  // the zk state transition verifier key
  bytes state_transition_vkey = 7;
  // the zk state membership verifier key
  bytes state_membership_vkey = 8;
  // hash-based commitment to the verifier key used for public input integrity
  bytes vkey_commitment = 9;
}

// EventCreateZKExecutionISM defines the event type emitted when creating a new ZKExecutionISM.
// TODO: consider outputting hex encoded strings in favour of bytes in this typed event,
// note that bytes will be base64 encoded strings when dealing with JSON objects
message EventCreateZKExecutionISM {
  option (gogoproto.goproto_getters) = false;

  // unique hyperlane identifier
  string id = 1 [
    (gogoproto.customtype) = "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable)   = false
  ];
  // the owner or creator of the ism
  string owner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // state commitment root of the remote chain
  bytes state_root = 3;
  // latest tracked height of the remote chain
  uint64 height = 4;
  // the celestia namespace identifier used by the application
  bytes namespace = 5;
  // the public key of the sequencer
  bytes sequencer_public_key = 6;
  // the zk state transition verifier key of the sp1 prover client
  bytes state_transition_vkey = 7;
  // the zk state membership verifier key of the sp1 prover client
  bytes state_membership_vkey = 8;
  // hash-based commitment to the verifier key used for public input integrity
  bytes vkey_commitment = 9;
}

// Params defines the zk ism module parameters.
message Params {
  option (gogoproto.goproto_getters) = false;

  uint32 header_hash_retention = 1;
}
